Remove extra logging + extend proxy config +

--- a/proxy/src/main/resources/reference.conf
+++ b/proxy/src/main/resources/reference.conf
@@ -7,4 +7,9 @@
         host = "localhost"
         port = 9999
     }
+
+    circuit-breaker {
+        retry-times = 3
+        initial-retry-delay = 2s
+    }
 }
