Add one more parameter to proxy config

--- a/proxy/src/main/resources/reference.conf
+++ b/proxy/src/main/resources/reference.conf
@@ -2,7 +2,9 @@
     server {
         host = "localhost"
         port = 8083
+        request-timeout = 60s
     }
+
     grpc-endpoint {
         host = "localhost"
         port = 9999
